# toolchain_chromium

./: .bazelrc  .bazelversion  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  internal_deps.bzl
.github/workflows/: ci.yaml  release.yml
chromium/: BUILD.bazel  repositories.bzl  toolchain.bzl
chromium/private/: BUILD.bazel  toolchains_repo.bzl
docs/: BUILD.bazel  repositories.md  toolchain.md
example/genrule/: BUILD.bazel
